fixed issue with timer on the last stage - it was invisible when popup is opened

--- a/ui-app/src/scss/stages/_stage4.scss
+++ b/ui-app/src/scss/stages/_stage4.scss
@@ -72,6 +72,11 @@
                content: ' : ';
            }
        }
+       &.closeBlock {
+            display: block;
+            margin-left: 319px;
+            margin-top: -559px;
+       }
     }
 }
 
